k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: springboot
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: harbor.aikoo.net/tanzu/gateway:1.5
          ports:
            - containerPort: 9001
