k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gateway
  name: gateway
  namespace: springboot
spec:
  ports:
    - port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: gateway
  type: ClusterIP
status:
  loadBalancer: {}
